@@ -17,6 +17,7 @@
 
 ## BUG FIXES ##
 
+* Wizard balance checking message box now reports balance correctly. (#67)
 * Wizard dialogs for adding question data structures to a HIT did not close on accepting "OK". (#65)
 * `GetAssignments` only returned the first answer option when multiple selection answers were chosen by a worker. (#63, h/t Kyle Harms)
 * Fixed a possible bug in `ContactWorkers` batch mode that sent multiple emails to the same worker(s). (#58, h/t Andy Guess)
